; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/dsa/b53/extr_b53_srab.c_b53_srab_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/dsa/b53/extr_b53_srab.c_b53_srab_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.b53_device = type { %struct.b53_srab_priv* }
%struct.b53_srab_priv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @b53_srab_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @b53_srab_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.b53_device*, align 8
  %4 = alloca %struct.b53_srab_priv*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %5 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %6 = call %struct.b53_device* @platform_get_drvdata(%struct.platform_device* %5)
  store %struct.b53_device* %6, %struct.b53_device** %3, align 8
  %7 = load %struct.b53_device*, %struct.b53_device** %3, align 8
  %8 = getelementptr inbounds %struct.b53_device, %struct.b53_device* %7, i32 0, i32 0
  %9 = load %struct.b53_srab_priv*, %struct.b53_srab_priv** %8, align 8
  store %struct.b53_srab_priv* %9, %struct.b53_srab_priv** %4, align 8
  %10 = load %struct.b53_srab_priv*, %struct.b53_srab_priv** %4, align 8
  %11 = call i32 @b53_srab_intr_set(%struct.b53_srab_priv* %10, i32 0)
  %12 = load %struct.b53_device*, %struct.b53_device** %3, align 8
  %13 = icmp ne %struct.b53_device* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %1
  %15 = load %struct.b53_device*, %struct.b53_device** %3, align 8
  %16 = call i32 @b53_switch_remove(%struct.b53_device* %15)
  br label %17

17:                                               ; preds = %14, %1
  ret i32 0
}

declare dso_local %struct.b53_device* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @b53_srab_intr_set(%struct.b53_srab_priv*, i32) #1

declare dso_local i32 @b53_switch_remove(%struct.b53_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
